# impsia_python_toolbox

./: .gitignore  README.md  custom_wordlist_for_aspell.en.pws  pylint_config.toml  pyproject.toml  setup.cfg  tox.ini
impsia_python_toolbox/: impsia_subprocess_handling.py  impsia_toolbox.py
src/impsia/python_toolbox/: __init__.py  logging_default_config.ini  logging_tools.py  misc_common_tools.py  subprocess_tools.py
src/sidlogism/python_toolbox/: logging_default_config.ini  misc_common_tools.py  subprocess_tools.py
tests/: test__impsia_subprocess_handling.py  test__logging_tools.py  test__misc_common_tools.py  test__subprocess_tools.py
